# Pydal

./: .gitignore  README.md  pyproject.toml
tests/: main.py
tidal/: __init__.py  client.py  token_cache.py
tidal/models/: __init__.py  album.py  artist.py  base.py  dataclass.py  media.py  metadata.py  picture.py  properties.py  resource.py  track.py  video.py
tidal/types/: token.py
